[package]
name = "doc-previewer"
version = "0.3.1"
edition = "2021"
description = "Web service that publishes a preview of a GitHub project documentation."
license = "3bsd"

[dependencies]
tokio = "1.25"
actix-web = "4"
awc = { version = "3", features = ["rustls"] }
serde_json = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
env_logger = "0.10"
log = "0.4"
toml = "0.8"
serde = "1.0"
serde_derive = "1.0"
clap = { version = "4.4", features = ["derive"] }

[package.metadata.deb]
maintainer = "Marc Garcia <garcia.marc@gmail.com>"
copyright = "2024 pandas via NumFOCUS, Inc."
license-file = ["LICENSE", "4"]
extended-description = """\
Web service that publishes a preview of a GitHub project documentation."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/doc-previewer", "usr/bin/", "755"],
    ["config.toml", "etc/doc-previewer/config.toml", "644"],
]
maintainer-scripts = "systemd_units"
systemd-units = { enable = true }
